eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-bank-api-deployment
    labels:
        app: simple-bank-api
spec:
    replicas: 2
    selector:
        matchLabels:
            app: simple-bank-api
    template:
        metadata:
            labels:
                app: simple-bank-api
        spec:
            containers:
                - name: simple-bank-api
                  image: 095420225348.dkr.ecr.eu-west-1.amazonaws.com/simplebank:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
